crates/biome_js_parser/tests/js_test_suite/error/type_arguments_missing_elements.ts
type Foo = Bar<, A>;

type Foo = Bar<A, , B>;
